// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      expense={
        Object {
          "amount": 2500,
          "createdAt": 0,
          "description": "Rice",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 500,
          "createdAt": 345600000,
          "description": "Book",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 25000,
          "createdAt": -345600000,
          "description": "Shoes",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
</div>
`;
